--- a/3/src/index.html
+++ b/3/src/index.html
@@ -22,7 +22,7 @@
 						<a href="#!" class="left-align">首页</a>
 						<ul class="right">
 							<li><a href="#modal1" class="waves-effect waves-light"><i class="material-icons">notifications</i></a></li>
-							<li><a href="#" class="waves-effect waves-light"><i class="material-icons" onclick="refresh()">refresh</i></a></li>
+							<li><a href="#" class="waves-effect waves-light"><i class="material-icons" onClick="refresh()">refresh</i></a></li>
 							<li><a class="dropdown-button waves-effect waves-light" href="#!" data-activates="dropdown1"><i class="material-icons">more_vert</i></a></li>
 						</ul>
 
@@ -39,13 +39,13 @@
 				</div>
 			</div>
 			<ul id="dropdown1" class="dropdown-content z-depth-5">
-				<li><a href="#" style="color: #000">夜间模式</a></li>
-				<li><a href="#" style="color: #000">设置选项</a></li>
+				<li><a href="#">夜间模式</a></li>
+				<li><a href="#">设置选项</a></li>
 			</ul>
 			<ul id="slide-out" class="side-nav">
 				<li class="light-blue">
 					<a class="waves-effect waves-light">
-						<img class="circle slide-left" src="https://avatars3.githubusercontent.com/u/9670320">
+						<img class="circle slide-left" src="https://avatars3.githubusercontent.com/u/9670320" />
 						<span class="color-white">fengnovo</span>
 					</a>
 				</li>
@@ -57,21 +57,10 @@
 						<span class="color-white"><i class="material-icons slide-left-icon">file_download</i>离线下载</span>
 					</a>
 				</li>
-				<li><a class="waves-effect">
-					<span class="color-blue"><i class="material-icons slide-left-icon slide-left-icon-home">home</i>首页</a></span>
+				<li><a class="waves-effect" onClick="refresh()">
+					<span class="color-blue"><i class="material-icons slide-left-icon slide-left-icon-home">home</i>首页</span>
+					</a>
 				</li>
-				<li><a class="waves-effect">日常心理学</a></li>
-				<li><a class="waves-effect">用户推荐日报</a></li>
-				<li><a class="waves-effect">电影日报</a></li>
-				<li><a class="waves-effect">不许无聊</a></li>
-				<li><a class="waves-effect">设计日报</a></li>
-				<li><a class="waves-effect">大公司日报</a></li>
-				<li><a class="waves-effect">财经日报</a></li>
-				<li><a class="waves-effect">互联网安全</a></li>
-				<li><a class="waves-effect">开始游戏</a></li>
-				<li><a class="waves-effect">音乐日报</a></li>
-				<li><a class="waves-effect">动漫日报</a></li>
-				<li><a class="waves-effect">体育日报</a></li>
 			</ul>
 			<div id="scrollArea">
 				<div class="slider">
@@ -102,6 +91,32 @@
 		</div>
 	</div>
 	<script>
+
+		function getd2(newD){
+			newD = new Date(newD)
+			function f(x){
+				return x > 9 ? x : '0'+x
+			}
+			return newD.getFullYear()+''+f(newD.getMonth()+1)+''+f(newD.getDate())
+		}
+
+		function getd1(da){ //20170520
+			da = da+'';
+			var y = da.slice(0,4);
+			var m = da.slice(4,6);
+			var d = da.slice(6,8);
+			// console.log(y,m,d)
+			// console.log(new Date(y,m-1,d).getTime())
+			// console.log(getd2(new Date(y,m-1,d).getTime()))
+
+			var preDa = new Date(y,m-1,d).getTime() - 86400000;
+
+			console.log(getd2(preDa))
+			return getd2(preDa)
+			
+		}
+
+
 		function imgUrl(url) {
 			if(url.indexOf('zhimg.com')!=-1){
 				return 'http://111.230.139.105:9999'+url.slice(url.indexOf('zhimg.com')+9)
@@ -109,6 +124,46 @@
 				return url
 			}
 		}
+
+		function uns() {
+			$(document).unbind('scroll');
+		}
+
+		function handleTab(id){
+			// event.preventdefault();
+			$('#loading').show();
+			$.ajax({
+				url: 'http://111.230.139.105/api/zhihu/theme/'+id,
+				success: function (data) {
+					$('html,body').animate({ scrollTop: 0 }, 0);
+					$('#loading').hide();
+					// console.log(data)
+					// zhihuData[date] = data.stories;
+					// sessionStorage.setItem('zhihu', JSON.stringify(zhihuData));
+					var li = '';
+					data.stories.forEach(function (item) {
+						// li += ('<li><a href="./detail.html?id=' + item.id + '">' + '<img src=' + item.images[0] + ' alt=""/>' + item.title + '</a></li>')
+						li+= '<li class="p-5 waves-effect c-radius z-depth-1">'
+							+'	<a href="./detail.html?id=' + item.id + '">'
+							+'		<p class="m-r-1">' + item.title + '</p>'
+							+((item.images && item.images.length>0)?'<img src=' + imgUrl(item.images[0]) + ' alt="" />':'')
+							+'	</a>'
+							+'</li>';
+					})
+					$('#list').html(li);
+					uns();
+					// s();
+					// setTimeout(function(){
+					// 	isCalling = false;
+					// },300);
+					
+				},
+				error: function (data) {
+
+				}
+			})
+		}
+
 		function login(){
 
 		}
@@ -123,7 +178,14 @@
 				zhihuData = JSON.parse(sessionStorage.getItem('zhihu'));
 			}
 
-			$(".button-collapse").sideNav();
+			// $(".button-collapse").sideNav();
+			$('.button-collapse').sideNav({
+			      menuWidth: 300, // Default is 300
+			      edge: 'left', // Choose the horizontal origin
+			      closeOnClick: true, // Closes side-nav on <a> clicks, useful for Angular/Meteor
+			      draggable: true // Choose whether you can drag to open on touch screens
+			    }
+			  );
 			
 			var date = 20170520, isCalling = false;
 
@@ -142,7 +204,7 @@
 						if((top + 390)> $('#container').height()){ 
 							$('#loading').show();
 							// console.log('0');
-							date -= 1;
+							date = getd1(date);
 							// $('#loading').show();
 							callAjax();
 						}
@@ -163,9 +225,9 @@
 						data.stories.forEach(function (item) {
 							// li += ('<li><a href="./detail.html?id=' + item.id + '">' + '<img src=' + item.images[0] + ' alt=""/>' + item.title + '</a></li>')
 							li+= '<li class="p-5 waves-effect c-radius z-depth-1">'
-								+'	<a href="./detail.html?id=' + item.id + '" target=_blank>'
+								+'	<a href="./detail.html?id=' + item.id + '">'
 								+'		<p class="m-r-1">' + item.title + '</p>'
-								+'		<img src=' + imgUrl(item.images[0]) + ' alt="">'
+								+'		<img src=' + imgUrl(item.images[0]) + ' alt="" />'
 								+'	</a>'
 								+'</li>';
 						})
@@ -187,6 +249,7 @@
 				url: 'http://111.230.139.105/api/zhihu//news/latest',
 				success: function (data) {
 					console.log(data)
+					date = data.date;
 					zhihuData[date] = data.stories;
 					sessionStorage.setItem('zhihu', JSON.stringify(zhihuData));
 					var banners='',li = '';
@@ -204,9 +267,9 @@
 					});
 					data.stories.forEach(function (item) {
 						li+= '<li class="p-5 waves-effect c-radius z-depth-1">'
-							+'	<a href="./detail.html?id=' + item.id + '" target=_blank>'
+							+'	<a href="./detail.html?id=' + item.id + '">'
 							+'		<p class="m-r-1">' + item.title + '</p>'
-							+'		<img src=' + imgUrl(item.images[0]) + ' alt="">'
+							+'		<img src=' + imgUrl(item.images[0]) + ' alt="" />'
 							+'	</a>'
 							+'</li>';
 					});
@@ -220,6 +283,20 @@
 				},
 				error: function (data) {
 					console.log(data)
+				}
+			});
+
+
+			$.ajax({
+				url: 'http://111.230.139.105/api/zhihu/themes',
+				success: function (data) {
+					var li = '';
+					data.others.forEach(function (item) {
+						li+= '<li><a onClick="handleTab(' + item.id + ')" class="waves-effect">' + item.name + '</a></li>'
+					})
+					$('#slide-out').append(li);
+				},
+				error: function (data) {
 				}
 			});
 
